# behistun

./: .gitignore  Cargo.toml  Makefile  README.md  supported.S  test.S  test.sh
examples/asm/: hello_world.S  read_file.S  test.S  test_move_mem.S  test_move_stack.S  test_postincr.S
examples/c/: fib.c  get_gid.c
src/: cpu.rs  decoder.rs  loader.rs  main.rs  memory.rs  syscall.rs
src/cpu/: m68020.rs  mod.rs
src/decoder/: display.rs  mod.rs
test-csmith/: csmith_1.c  csmith_10.c  csmith_11.c  csmith_12.c  csmith_13.c  csmith_14.c  csmith_15.c  csmith_16.c  csmith_17.c  csmith_18.c  csmith_19.c  csmith_2.c  csmith_20.c  csmith_21.c  csmith_22.c  csmith_23.c  csmith_24.c  csmith_25.c  csmith_26.c  csmith_27.c  csmith_28.c  csmith_29.c  csmith_3.c  csmith_30.c  csmith_31.c  csmith_32.c  csmith_33.c  csmith_36.c  csmith_37.c  csmith_38.c  csmith_39.c  csmith_4.c  csmith_40.c  csmith_41.c  csmith_42.c  csmith_43.c  csmith_44.c  csmith_45.c  csmith_46.c  csmith_47.c  (+56 more)
test-files/asm/: add_simple.S  add_sub.S  addressing_modes.S  addx_subx.S  and_or.S  asl_lsl.S  bfchg_bfclr_bfset.S  bfexts.S  bfextu.S  bfffo.S  branch.S  bset_bclr.S  btst.S  cas.S  cmp2.S  cmpm.S  compare.S  dbcc.S  div.S  divl_mull.S  divu_divs.S  eor.S  exg_swap.S  ext_test.S  extb.S  hello.S  jsr_bsr.S  lea_pea.S  link_unlk.S  loop_count.S  mem.S  movea.S  movem_test.S  moveq_quick.S  mul.S  mulu_muls.S  neg_not.S  overflow.S  pack_unpk.S  rotate.S  (+6 more)
test-files/c/: access_mode.c  access_test.c  array_2d.c  array_sum.c  atexit_test.c  atoi_itoa.c  bitfields.c  (+113 more)
tests/: cli.rs  csmith.rs  integration.rs
(+631 files in other folders)
