[package]
name = "behistun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
goblin = "0.10.3"
libc = "0.2"

[dev-dependencies]
datatest-stable = "0.3"
assert_cmd = "2.1.1"
insta = { version = "1.44.1", features = ["yaml", "glob"] }
insta-cmd = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
libtest-mimic = "0.8"
rand = "0.9.2"

[[test]]
name = "cli"
harness = false

[[test]]
name = "csmith"
harness = false

[[test]]
name = "integration"
harness = false
